--- a/Mini Project/Casestudy/Casestudy/Casestudy.csproj
+++ b/Mini Project/Casestudy/Casestudy/Casestudy.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DDF9B6D3-572A-4E2B-A505-3666DBE921E5}</ProjectGuid>
+    <ProjectGuid>{B9562223-D50F-4444-B547-283D760F1222}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Codebasedexam3</RootNamespace>
-    <AssemblyName>Codebasedexam3</AssemblyName>
+    <RootNamespace>Casestudy</RootNamespace>
+    <AssemblyName>Casestudy</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,8 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppEngine.cs" />
+    <Compile Include="Class1.cs" />
+    <Compile Include="Class2.cs" />
+    <Compile Include="Enroll.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Student.cs" />
+    <Compile Include="UserInterface.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
